x.y.z
=====

Release date:

New features:

* Add Edit menu entry to reset instruments

* Implement adjustable delays

* Implement initial note visualizer on the bottom bar

* Implement cut/copy/paste for selected lines

* Implement line selection and transpose

* Implement context menu action to interpolate velocity

* Set different color for each track

Bug fixes:

* Update index highlights after creating tracks

* Fix already set column velocity not showing in the settings dialog

* Fix blank tracks when changing a pattern

* Fix song position not reset on initialize

* Fix lazy load on pattern length change

* Fix new columns not visible

Other:

* Always show track name as bold

* Give some time to change patch before applying other settings
  - For example Korg Minilogue XD was not fast enough to change patch

* Log file metadata

0.1.0
=====

Release date:

Wed, 26 Feb 2025 08:15:31 +0200

New features:

* Accurate internal timing

* Fully scalable UI

* Cool volume meters like in NoiseTracker

* Easy-to-use track editing

* Poor Man's MIDI Hot-Plug with automatic setup
  - Noteahead notices when a device goes online/offline
  - Noteahead automatically sets channel, bank, and patch

* Send MIDI clock on desired ports

* Tracks with multiple note columns

* Track settings with port, channel, bank, patch, volume, pan, cutoff
  - Can be easily changed on-the-fly via line events

* Track and column-specific velocity scales
  - Effective velocity is the product of track scale, column scale, and note velocity

* Saves to a custom (but open!) XML-based **.nahd** format
